--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <main class="z-10 flex flex-col items-center justify-center h-screen gap-y-16">
     <section class="relative flex flex-col items-center gap-y-3">
       <img src="./images/pattern-circles.svg" alt="A pattern of circles"
-        class="absolute -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2">
+        class="absolute -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2 -z-10">
       <h1 class="text-[var(--dark-bluish-text)] font-extrabold capitalize text-center text-2xl">Simple, traffic-based
         pricing</h1>
       <p class="max-w-[225px] sm:max-w-none text-center">Sign up for our 30-day trial. No credit card required.</p>
